cmake_minimum_required(VERSION 3.10)
project(cpp_oop_demos CXX)
set(CMAKE_CXX_STANDARD 11)
add_subdirectory(01_protected)
add_subdirectory(02_hiding_using)
add_subdirectory(03_inheritance_modes)
add_subdirectory(04_ctor_dtor_order)
add_subdirectory(05_copy_assign)
add_subdirectory(06_mi_name_conflict)
add_subdirectory(07_virtual_base_order)
add_subdirectory(08_aggregation_composition)
