cmake_minimum_required(VERSION 3.14)
project(cpp_virtual_polymorphism_demo CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if (MSVC)
  add_compile_options(/W4 /permissive-)
else()
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()
add_subdirectory(01_binding)
add_subdirectory(02_ctor_dtor_binding)
add_subdirectory(03_virtual_destructor_importance)
add_subdirectory(04_override_bug_hidden)
add_subdirectory(05_fixed_override)
add_subdirectory(06_fixed_overload_using)
add_subdirectory(07_covariant_return)
add_subdirectory(08_rtti_dynamic_cast)
add_subdirectory(09_figure_abstract)
add_subdirectory(10_interface_isolation)
add_subdirectory(11_when_to_make_virtual)
add_subdirectory(12_stack_adt)
add_subdirectory(13_union_vs_abstract)
